Remove Testimonials section for now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Suzanne Kellow offers private piano and voice lessons for children in Palm Beach and Jupiter, Florida. Former opera singer and conductor with over 30 years of experience.">
+    <meta name="description" content="Suzanne Kellow offers private piano and voice lessons for all ages in Palm Beach and Jupiter, Florida. Former opera singer and conductor with over 30 years of experience in music education.">
     <title>Suzanne Kellow | Piano & Voice Lessons</title>
   </head>
   <body>
